<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/pager_gary_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/id_gold_record_RLayout"
            style="@style/white_pager_style"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_marginTop="32px"
            android:gravity="center">

            <ImageView
                android:id="@+id/gold_record_icon"
                android:layout_width="44px"
                android:layout_height="44px"
                android:layout_marginLeft="24px"
                android:clickable="false"
                android:src="@mipmap/gold_record_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/gold_record_icon"
                android:clickable="false"
                android:text="@string/gold_record"
                android:textColor="@color/black6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="44px"
                android:layout_height="40px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="24px"
                android:clickable="false"
                android:src="@mipmap/gray_right_icon" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="88px"
            android:background="@color/vertical_line" />

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/id_win_record_RLayout"
            style="@style/white_pager_style"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:gravity="center">

            <ImageView
                android:id="@+id/win_record_icon"
                android:layout_width="44px"
                android:layout_height="44px"
                android:layout_marginLeft="24px"
                android:clickable="false"
                android:src="@mipmap/win_record_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/win_record_icon"
                android:clickable="false"
                android:text="@string/win_record"
                android:textColor="@color/black6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="44px"
                android:layout_height="40px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="24px"
                android:clickable="false"
                android:src="@mipmap/gray_right_icon" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="88px"
            android:background="@color/vertical_line" />

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/id_order_share_RLayout"
            style="@style/white_pager_style"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:gravity="center">

            <ImageView
                android:id="@+id/order_share_icon"
                android:layout_width="44px"
                android:layout_height="44px"
                android:layout_marginLeft="24px"
                android:clickable="false"
                android:src="@mipmap/order_share_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/order_share_icon"
                android:clickable="false"
                android:text="@string/order_share"
                android:textColor="@color/black6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="44px"
                android:layout_height="40px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="24px"
                android:clickable="false"
                android:src="@mipmap/gray_right_icon" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/id_invite_friend__RLayout"
            style="@style/white_pager_style"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_marginTop="32px"
            android:gravity="center">

            <ImageView
                android:id="@+id/invite_friend_icon"
                android:layout_width="44px"
                android:layout_height="44px"
                android:layout_marginLeft="24px"
                android:clickable="false"
                android:src="@mipmap/invite_friend_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/invite_friend_icon"
                android:clickable="false"
                android:text="@string/invite_friend_my"
                android:textColor="@color/black6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="44px"
                android:layout_height="40px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="24px"
                android:clickable="false"
                android:src="@mipmap/gray_right_icon" />
        </com.zhy.autolayout.AutoRelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="88px"
            android:background="@color/vertical_line" />

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/id_address_RLayout"
            style="@style/white_pager_style"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:gravity="center">

            <ImageView
                android:id="@+id/address_icon"
                android:layout_width="44px"
                android:layout_height="44px"
                android:layout_marginLeft="24px"
                android:clickable="false"
                android:src="@mipmap/address_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_toRightOf="@id/address_icon"
                android:clickable="false"
                android:text="@string/address"
                android:textColor="@color/black6"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="44px"
                android:layout_height="40px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="24px"
                android:clickable="false"
                android:src="@mipmap/gray_right_icon" />
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</merge>
